--- a/kadian/package.json
+++ b/kadian/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "mint-ui": "^2.2.13",
+    "swiper": "^5.3.8",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
